syntax="proto2";

package org.jboss.netty.protobuf.examples;

option java_package = "io.vicp.frlib.nio.netty_3.binaryprotocol.protobuf";
option java_outer_classname = "AddressBookProtocol";

message Person {
    required string name = 1;
    optional int32 id = 2;
    optional string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        required string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }

    repeated PhoneNumber phones = 4;
}

message AddressBook {
    repeated Person people = 1;
}